--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <meta name="description" content="Description">
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+  <link rel="shortcut icon" href="/style/icons/logoVC.png">
   <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify/themes/vue.css">
-  
+  <link rel="stylesheet" href="/style/css/general.css">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet"> 
 </head>
 <body>
   <div id="app"></div>
@@ -17,9 +19,9 @@
       coverpage: true,
       repo: 'https://github.com/fga-eps-mds/2020.1-Vamos_Cuidar.git',
       name: 'Vamos Cuidar',
-      themeColor: '#000000',
+      themeColor: '#090673',
       subMaxLevel: 2,
-      logo: '',
+      logo: '/style/icons/wordmarkVC.png',
     }
   </script>
   <script src="//cdn.jsdelivr.net/npm/docsify/lib/docsify.min.js"></script>  
