#156 Removendo logo do README e atualizando a wordmark.

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       name: 'Vamos Cuidar',
       themeColor: '#090673',
       subMaxLevel: 2,
-      logo: '/style/icons/wordmarkVC.png',
+      logo: '/style/icons/WordMark.png',
     }
   </script>
   <script src="//cdn.jsdelivr.net/npm/docsify/lib/docsify.min.js"></script>  
